[tool:pytest]
testpaths = test

[flake8]
max-line-length = 80

[isort]
known_first_party = hypercore-crypto
known_third_party = pytest
line_length = 80
multi_line_output = 3
skip = .venv, .tox
include_trailing_comma = True

[metadata]
name = hypercore-crypto
author = decentral1se
author_email = lukewm@riseup.net
maintainer = decentral1se
maintainer_email = lukewm@riseup.net
url = https://hack.decentral1.se/datpy/hypercore-crypto
project_urls =
  Source Code = https://hack.decentral1.se/datpy/hypercore-crypto
  Documentation = https://hypercore-crypto.readthedocs.io/
  Maintainer Support = https://decentral1.se
description = Cryptography primitives for Hypercore
long_description = file: README.rst
license = GPLv3
license_file = LICENSE
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
use_scm_version = True
python_requires = >=3.6
setup_requires =
  setuptools_scm
  setuptools_scm_git_archive
package_dir =
  = .
packages = find:
zip_safe = False
install_requires =
  pysodium >= 0.7.2, < 0.8
  merkle-tree-stream >= 0.0.1a1, < 1.0.0

[options.packages.find]
where = .

[build_sphinx]
all_files = 1
build-dir = documentation/build
source-dir = documentation/source
warning-is-error = True

[options.extras_require]
docs =
  sphinx
  sphinx-autodoc-typehints >= 1.6.0, < 2.0
changelog =
  towncrier <= 19.2.0, < 20.0
